<resources>
    <string name="app_name">Sneakers App</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="text_sneaker_thumbnail">Sneaker thumbnail</string>
    <string name="text_add_to_cart">Add to cart</string>
    <string name="text_add_to_favorites">Add to favorites</string>
    <string name="text_sneakers">Sneakers</string>
    <string name="text_search">Search</string>
    <string name="text_sizes">Sizes</string>
    <string name="text_available_sizes">Available sizes</string>
    <string name="text_color">Color</string>
    <string name="text_available_colors">Available colors</string>
    <string name="text_cart">Cart</string>
    <string name="text_check_out">Check out</string>
    <string name="text_remove_one">Remove one</string>
    <string name="text_add_one">Add one</string>
    <string name="text_onboarding_image">Onboarding sneaker image</string>
    <string name="text_next">Next</string>
    <string name="text_finish">Finish</string>
    <string name="text_purchases">Purchases</string>
    <string name="text_profile">Profile</string>
    <string name="text_search_sneakers">Search sneakers</string>
    <string name="text_brand_logo">Brand logo</string>
    <string name="text_buy_now">Buy now</string>
    <string name="text_sneaker_image">Sneaker image</string>
    <string name="text_search_your_sneakers">Search your sneakers</string>
    <string name="text_filter_by_brand">Filter by brand</string>
    <string name="text_sneaker_search_empty">Sneaker search empty</string>

    <!--Formatt strings-->

    <string name="text_price_currency">$ %1.2f %2$s</string>
    <string name="text_price_currency_format">$ %1.2f</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_continue">Continue</string>
    <string name="text_add_new_address">Add new address</string>
    <string name="text_select_the_address">Select the address</string>
    <string name="text_pay_order">Pay order</string>
    <string name="text_select_payment_method">Select payment method</string>
    <string name="text_add_payment_method">Add new payment method</string>
    <string name="text_filters">Filters</string>
    <string name="text_buy_again">Buy again</string>
    <string name="text_all">All</string>
    <string name="text_this_month">This month</string>
    <string name="text_this_year">This year</string>
    <string name="text_update_profile">Update profile</string>
    <string name="text_add_or_update_your_addresses">Add or update your addresses</string>
    <string name="text_address_information">Address information</string>
    <string name="text_chevron_right">Chevron right</string>
    <string name="text_payment_method">Payment methods</string>
    <string name="text_payment_method_subtitle">Manage your cards for payment</string>
    <string name="text_sign_out">Sign out</string>
    <string name="text_manage_addresses_title">Manage your addresses</string>
    <string name="text_default">Default</string>
    <string name="text_address_icon">Address icon</string>
    <string name="text_address_options">Address options</string>
    <string name="text_payment_methods">Payment methods</string>
    <string name="text_credit_card_icon">Credit card icon</string>
    <string name="text_remove_card">Remove card</string>
    <string name="text_empty_list">Empty list</string>
    <string name="text_save_address">Save address</string>
    <string name="text_enter_zip_code_title">Enter a zip code</string>
    <string name="text_zip_code">Zip code</string>
    <string name="text_name_last_name">Nombre y apellido</string>
    <string name="text_enter_zip_code">Enter zip code</string>
    <string name="text_state">State</string>
    <string name="text_municipality">Municipality/City hall</string>
    <string name="text_suburb">Suburb</string>
    <string name="text_street">Street</string>
    <string name="text_int_number">Internal number (Optional)</string>
    <string name="text_contact_number">Contact number</string>
    <string name="text_card_number">Card number</string>
    <string name="text_card_beneficiary">Beneficiary</string>
    <string name="text_card_expiration">Expiration</string>
    <string name="text_card_cvv">CVV</string>
    <string name="text_card_end_format">Ends with %1$s</string>
    <string name="text_card_expiration_format">Expiration: %1$s</string>

    <string-array name="banks">
        <item>BBVA Bancomer</item>
        <item>Santander</item>
        <item>Scotiabank</item>
        <item>Bancoppel</item>
        <item>Citibanamex</item>
        <item>HSBC</item>
        <item>Banregio</item>
    </string-array>

    <string name="text_check_done">Check done</string>
    <string name="text_purchase_completed">Purchase completed</string>
    <string name="text_you_bought">You bought</string>
    <string name="text_product_image">product image</string>
    <string name="text_purchase_finished_sent">Your sneakers are in the way</string>
    <string name="text_close">Close</string>
    <string name="title_activity_sale_order">SaleOrderActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_delivery_method">Method of delivery</string>
    <string name="text_you_pay">You pay</string>
    <string name="text_address_and_phone">Address and phone</string>
    <string name="text_edit_or_choose_address">Change delivery address</string>
    <string name="text_arrive_tomorrow_description">Arrive tomorrow at your home</string>
    <string name="text_pick_it_up_description">Pick it up in our stores</string>
    <string name="text_free">Free</string>
    <string name="text_confirm_order">Confirm order</string>
    <string name="text_favorites_added">Sneaker added to favorites</string>
    <string name="text_favorite_removed">Sneaker removed from favorites</string>
    <string name="text_sneaker_added_to_cart">Sneaker added to your cart</string>
    <string name="text_clear_results">Clear results</string>
    <string name="text_select_size">Select a size</string>
    <string name="text_select_color">Select a color</string>
    <string name="text_discount_percentage">%1$d% OFF</string>
    <string name="text_slide_1_title">Find the hottest sneakers</string>
    <string name="text_slide_2_title">The best offers</string>
    <string name="text_slide_2_description">Daily offers in all the brands. Become a member to get exclusive offers</string>
    <string name="text_slide_1_description">Are you a sneakerhead? Then, you are in the right place</string>
    <string name="text_slide_3_title">Latest releases</string>
    <string name="text_slide_3_description">Fond the newest models, pre-order before the release date to be the first one to get them</string>
    <string name="text_slide_4_title">Exclusive models</string>
    <string name="text_slide_4_description">Exclusive models only in Sneakers App that you cannot fin in another place..</string>
    <string name="text_slide_5_title">The best brands</string>
    <string name="text_slide_5_description">The best brands in the market in a single place. Guarantee of quality.</string>
    <string name="text_removed_from_cart">Sneaker removed from your cart</string>
    <string name="text_favorite_error_updating">Cannot update favorite status</string>
    <string name="text_address_saved">Adress saved!</string>
    <string name="text_address_updated">Address updated!</string>
    <string name="text_exit">Exit</string>
    <string name="text_exit_form_message">You area about to leave the form ¿do you want to exit?</string>
    <string name="text_accept">Accept</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_required_field">Required field</string>
    <string name="text_ext_number">External number</string>
    <string name="text_remove">Remove</string>
    <string name="text_edit">Edit</string>
    <string name="text_set_default">Set as default</string>
    <string name="text_default_address_title">Set address as default</string>
    <string name="text_default_address_message">The selected address will be used as delivery address in future purchases. ¿Continue?</string>
    <string name="text_remove_address_title">Remove address</string>
    <string name="text_remove_address_message">The selected address will be removed, ¿continue?</string>
    <string name="text_default_address_error">Cannot set address as default</string>
    <string name="text_remove_address_error">Address could not be removed</string>
    <string name="text_address_details_error">Cannot load address information</string>
    <string name="text_update_address">Update address</string>
    <string name="text_address_updated_error">Cannot update address</string>
    <string name="text_address_saved_error">Cannot save address</string>
    <string name="text_set_as_default_payment">Set as default payment method</string>
    <string name="text_card_saved_error">Cannot save card</string>
    <string name="text_card_format_error">Enter a valid card number</string>
    <string name="text_remove_card_title">Remove card</string>
    <string name="text_remove_card_message">The selected card will be removed, ¿continue?</string>
    <string name="text_banking_institution">Banking isntitution</string>
    <string name="text_select_an_option">Select an option</string>
    <string name="text_sigout_title">Sign out</string>
    <string name="text_sigout_message">You are about to delete all the data and signed out from the application ¿do you want to continue?</string>
    <string name="text_sneaker_details">Sneaker details</string>
    <string name="text_save_changes">Save changes</string>
    <string name="text_select_delivery_address_error">Select a delivery address</string>
    <string name="text_no_card_selected_error">Select a payment method</string>
</resources>