<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp">

    <ImageView
        android:id="@+id/img_sneaker_onboarding"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:contentDescription="@string/text_onboarding_image"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/air_jordan_mid_college" />

    <TextView
        android:id="@+id/tv_title_onboarding"
        style="@style/OnboardingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/img_sneaker_onboarding"
        app:layout_constraintStart_toStartOf="@+id/img_sneaker_onboarding"
        app:layout_constraintTop_toBottomOf="@+id/img_sneaker_onboarding"
        tools:text="Onboarding title" />

    <TextView
        android:id="@+id/tv_message_onboarding"
        style="@style/OnboardingMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_onboarding"
        tools:text="@tools:sample/lorem" />

</androidx.constraintlayout.widget.ConstraintLayout>